
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int pid_t ;


 int __msg (char*) ;
 int __msg_f (char*,int ) ;
 int cankill ;
 int close (int ) ;
 int exit (int) ;
 int fork () ;
 int setsid () ;
 int sleep (int) ;
 int * unsafe_fd ;

__attribute__((used)) static void migrate_evil_fd()
{
  int i;
  pid_t child;

  __msg("[**] Migrate evil unsafe fds to child process..\n");
  child = fork();
  if(!child)
  {


    setsid();
    if(!cankill)
      while(1)
        sleep(1);
    else
    {
      sleep(10);
      for(i=0; i<4; i++)
        close(unsafe_fd[i]);

      exit(1);
    }
  }
  else
  {
    if(!cankill)
      __msg_f("[**] Child process %d _MUST_ NOT die ... keep it alive:)\n", child);
  }
}
