; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux_x86-64/local/extr_9083.c_migrate_evil_fd.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux_x86-64/local/extr_9083.c_migrate_evil_fd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [49 x i8] c"[**] Migrate evil unsafe fds to child process..\0A\00", align 1
@cankill = common dso_local global i32 0, align 4
@unsafe_fd = common dso_local global i32* null, align 8
@.str.1 = private unnamed_addr constant [58 x i8] c"[**] Child process %d _MUST_ NOT die ... keep it alive:)\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @migrate_evil_fd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @migrate_evil_fd() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = call i32 @__msg(i8* getelementptr inbounds ([49 x i8], [49 x i8]* @.str, i64 0, i64 0))
  %4 = call i32 (...) @fork()
  store i32 %4, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %31, label %7

7:                                                ; preds = %0
  %8 = call i32 (...) @setsid()
  %9 = load i32, i32* @cankill, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %14, label %11

11:                                               ; preds = %7
  br label %12

12:                                               ; preds = %11, %12
  %13 = call i32 @sleep(i32 1)
  br label %12

14:                                               ; preds = %7
  %15 = call i32 @sleep(i32 10)
  store i32 0, i32* %1, align 4
  br label %16

16:                                               ; preds = %26, %14
  %17 = load i32, i32* %1, align 4
  %18 = icmp slt i32 %17, 4
  br i1 %18, label %19, label %29

19:                                               ; preds = %16
  %20 = load i32*, i32** @unsafe_fd, align 8
  %21 = load i32, i32* %1, align 4
  %22 = sext i32 %21 to i64
  %23 = getelementptr inbounds i32, i32* %20, i64 %22
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @close(i32 %24)
  br label %26

26:                                               ; preds = %19
  %27 = load i32, i32* %1, align 4
  %28 = add nsw i32 %27, 1
  store i32 %28, i32* %1, align 4
  br label %16

29:                                               ; preds = %16
  %30 = call i32 @exit(i32 1) #3
  unreachable

31:                                               ; preds = %0
  %32 = load i32, i32* @cankill, align 4
  %33 = icmp ne i32 %32, 0
  br i1 %33, label %37, label %34

34:                                               ; preds = %31
  %35 = load i32, i32* %2, align 4
  %36 = call i32 @__msg_f(i8* getelementptr inbounds ([58 x i8], [58 x i8]* @.str.1, i64 0, i64 0), i32 %35)
  br label %37

37:                                               ; preds = %34, %31
  br label %38

38:                                               ; preds = %37
  ret void
}

declare dso_local i32 @__msg(i8*) #1

declare dso_local i32 @fork(...) #1

declare dso_local i32 @setsid(...) #1

declare dso_local i32 @sleep(i32) #1

declare dso_local i32 @close(i32) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @__msg_f(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
